--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ test_results/
 .DS_Store
 Thumbs.db
 
+# Frontend
+frontend/node_modules/
+frontend/dist/
+frontend/.env
+frontend/.env.local
+frontend/.vite/
+
