--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,10 @@ python-multipart>=0.0.6  # For file uploads
 # Encryption for secrets management
 cryptography>=41.0.0  # For Fernet encryption
 
+# Authentication
+authlib>=1.2.0  # For OAuth flow
+python-jose[cryptography]>=3.3.0  # For JWT token handling
+
 # Testing (optional)
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
