--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,6 @@ python-jose[cryptography]>=3.3.0  # For JWT token handling
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 
+# Vector database for RAG
+chromadb>=0.4.0
+
